--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- Fazer login\r - Fazer cadastro\r - Ver os dados do seu perfil\r - Editar os dados do seu perfil\r - Ver postagens de outras pessoas\r     - Ver quatidade de curtidas numa postagem\r     - Ver os comentários em uma postagem\r - Curtir postagens de outras pessoas\r - Comentar em postagens",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "knex": "^2.4.2"
+    "knex": "^2.4.2",
+    "pg": "^8.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
